Lendo e realizando select em arquivo xml

--- a/JrTunes/JrTunes.csproj
+++ b/JrTunes/JrTunes.csproj
@@ -51,5 +51,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Data\AluraTunes.sql" />
+    <Content Include="Data\AluraTunes.xml" />
+    <Content Include="Data\LICENSE.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
