--- a/JrTunes/JrTunes.csproj
+++ b/JrTunes/JrTunes.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,8 +48,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +67,51 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Album.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Artista.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Cliente.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Faixa.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Funcionario.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Genero.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\ItemNotaFiscal.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\JrTunes.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JrTunes.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\JrTunes.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\JrTunes.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JrTunes.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Data\NotaFiscal.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Playlist.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\TipoMidia.cs">
+      <DependentUpon>JrTunes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Genero.cs" />
     <Compile Include="Musica.cs" />
     <Compile Include="Program.cs" />
@@ -50,12 +119,58 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="Data\JrTunes.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>JrTunes.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Data\JrTunes.edmx.diagram">
+      <DependentUpon>JrTunes.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Data\AluraTunes.sql" />
     <Content Include="Data\AluraTunes.xml" />
+    <Content Include="Data\JrTunes.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>JrTunes.Context.cs</LastGenOutput>
+      <DependentUpon>JrTunes.edmx</DependentUpon>
+    </Content>
+    <Content Include="Data\JrTunes.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\JrTunes.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>JrTunes.edmx</DependentUpon>
+      <LastGenOutput>JrTunes.cs</LastGenOutput>
+    </Content>
+    <Content Include="Data\JrTunes_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>JrTunes.mdf</DependentUpon>
+    </Content>
     <Content Include="Data\LICENSE.txt" />
+    <Content Include="JrTunes.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JrTunes_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>JrTunes.mdf</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
