--- a/JrTunes/JrTunes.csproj
+++ b/JrTunes/JrTunes.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="curso_parte_1.cs" />
+    <Compile Include="curso_parte_2.cs" />
     <Compile Include="Data\Album.cs">
       <DependentUpon>JrTunes.tt</DependentUpon>
     </Compile>
